@@ -1,6 +1,6 @@
-name    = Java-Javap
+name    = Java-2Perl6API
 abstract = Translate Java Class and Interface Definitions to Perl 6 Roles
-version = 0.06
+version = 0.07
 author  = Tim Bunce <Tim.Bunce@pobox.com>
 license = Perl_5
 copyright_holder = Tim Bunce <Tim.Bunce@pobox.com>
